RESOLVED FIXED69075
bug fixes for CreateThis, NewObject and GetByOffset in JSVALUE32_64 DFG JIT
https://bugs.webkit.org/show_bug.cgi?id=69075
Summary bug fixes for CreateThis, NewObject and GetByOffset in JSVALUE32_64 DFG JIT
Yuqiang Xian
Reported 2011-09-29 02:02:03 PDT
Arguments are not passed correctly for CreateThis and NewObject. The child node is incorrectly "used" by twice for GetbyOffset.
Attachments
the patch (2.45 KB, patch)
2011-09-29 02:05 PDT, Yuqiang Xian
no flags
Yuqiang Xian
Comment 1 2011-09-29 02:05:23 PDT
Created attachment 109136 [details] the patch
WebKit Review Bot
Comment 2 2011-09-29 12:06:47 PDT
Comment on attachment 109136 [details] the patch Clearing flags on attachment: 109136 Committed r96344: <http://trac.webkit.org/changeset/96344>
WebKit Review Bot
Comment 3 2011-09-29 12:06:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.