Bug fixes for CreateThis, NewObject and GetByOffset in JSVALUE32_64 DFG JIT https://bugs.webkit.org/show_bug.cgi?id=69075

Patch by Yuqiang Xian <yuqiang.xian@intel.com> on 2011-09-29
Reviewed by Gavin Barraclough.

* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::compile):

Canonical link: https://commits.webkit.org/85111@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96344 268f45cc-cd09-0410-ab3c-d52691b4dbfc